2012-11-14  Glenn Adams  <glenn@skynav.com>

        webkitpy: print-expectations - add --paths option to print only paths of test expectation files
        https://bugs.webkit.org/show_bug.cgi?id=102269

        Reviewed by Dirk Pranke.

        Add --paths option to print-expectations command in order to obtain list of applicable
        test expectation file paths.

        * Scripts/webkitpy/tool/commands/queries.py:
        (PrintExpectations.__init__):
        (PrintExpectations.execute):
        * Scripts/webkitpy/tool/commands/queries_unittest.py:
        (PrintExpectationsTest.run_test):
        (PrintExpectationsTest.test_paths):

2012-11-14  James Robinson  <jamesr@chromium.org>

        webgl-background-color.html started failing
        https://bugs.webkit.org/show_bug.cgi?id=102247

        Reviewed by Adrienne Walker.

        The compositor thread should outlive the WebView.

        * DumpRenderTree/chromium/TestShell.h:
        (TestShell):

2012-11-14  Nate Chapin  <japhet@chromium.org>

        Move empty loading to DocumentLoader, simplify FrameLoader::init()
        https://bugs.webkit.org/show_bug.cgi?id=101512

        Reviewed by Adam Barth.

        Chromium DRT has some code that doesn't play nicely with empty urls and incorrectly
        interprets them as a non-empty load. This ensures
        http/tests/navigation/new-window-redirect-history.html continues to pass
        in chromium.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::updateForCommittedLoad):

2012-11-14  Zan Dobersek  <zandobersek@gmail.com>

        Remove uses of deprecated unittest.TestCase aliases
        https://bugs.webkit.org/show_bug.cgi?id=102253

        Reviewed by Dirk Pranke.

        Replace the deprecated unittest.TestCase methods with the corresponding methods
        everywhere inside the Tools directory. The following replacements are done:
        - assertEquals -> assertEqual
        - assert_ -> assertTrue